# shape_detector

./: CMakeLists.txt  package.xml
launch/: camera.launch  pose_estimator.launch  prosilica.launch  shape_detector.launch  shape_visualizer.launch  usb_cam.launch  viewer.launch
src/: Geometry.cpp  color_threshold.cpp  feature.cpp  feature.h  geometry.cpp  geometry.h  shape_detector.cpp  shape_detector_fcns.cpp  shape_detector_fcns_with_ref.cpp  shape_detector_image.cpp  shape_detector_img_gray.cpp  shape_detector_img_hsv.cpp  shape_detector_main_only.cpp  shape_detector_ros_hsv.cpp  shape_detector_video.cpp  squares.cpp  take_image.cpp  video_subscriber.cpp
